# BlogSample

./: .gitignore  README.md  build.gradle  settings.gradle
BlogService/: build.gradle  proguard-rules.pro
BlogService/src/androidTest/java/com/blog/service/: ExampleInstrumentedTest.java
BlogService/src/main/: AndroidManifest.xml
BlogService/src/main/aidl/com/blog/service/: AbstractBlogInfo.aidl  AbstractBlogInfo.kt  BlogInfo.aidl  BlogInfo.kt  BlogInfo1.kt  IBlogListener.aidl
BlogService/src/main/java/com/blog/service/: BlogService.kt  MainActivity.kt
BlogService/src/main/res/values/: strings.xml
BlogService/src/test/java/com/blog/service/: ExampleUnitTest.java
app/: .gitignore  build.gradle
app/src/androidTest/java/com/blog/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/blog/a/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/blog/blog/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.dex
app/src/main/java/com/blog/: AbstractLoggerActivity.kt  BaseActivity.java  BaseDensityActivity.kt  IndexActivity.kt  MyApplication.kt  SimpleAdapter.java
app/src/main/java/com/blog/a/cpp/: CMakeLists.txt  HelloCMakeJni.java  hello_lib.cpp  method2.cpp  method2.h
app/src/main/java/com/blog/a/cpp/include/: HelloJni.h
app/src/main/res/animator/: path_morph.xml
app/src/main/res/drawable/: vectordrawable.xml
app/src/main/res/drawable-v21/: animatorvectordrawable.xml
app/src/main/res/layout/: activity_dex_loader_layout.xml  activity_espresso_layout.xml  activity_remote_service_layout.xml  activity_stroke_order_layout.xml  activity_transtion_details.xml  activity_transtion_grid.xml  activity_transtion_grid_item.xml  drag_layout.xml  index_layout.xml  jni_show_layout.xml  list_item_layout.xml  list_item_layout1.xml  list_item_layout2.xml  location_activity.xml  lottie_layout.xml  nested_scroll_layout.xml  vector_anim_layout.xml
app/src/main/res/menu/: lottie_menu.xml
app/src/main/res/transition/: auto_transition.xml  change_bounds_transition.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/main/res/values-v21/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
simplelocation/: build.gradle
simplelocation/src/main/: AndroidManifest.xml
wiki/: 简单定位.md
(+95 files in other folders)
